--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -23,6 +23,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
 		<PackageReference Include="vtortola.WebSocketListener" Version="3.0.0" />
 		<PackageReference Include="Watson" Version="4.3.5" />
 	</ItemGroup>
