--- a/AppMain/AppMain.csproj
+++ b/AppMain/AppMain.csproj
@@ -12,7 +12,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 
 		<!-- Display name -->
-		<ApplicationTitle>AppMain</ApplicationTitle>
+		<ApplicationTitle>FEL</ApplicationTitle>
 
 		<!-- App Identifier -->
 		<ApplicationId>de.noname.familyexpenseslist</ApplicationId>
@@ -38,7 +38,8 @@
   
 	<ItemGroup>
     <!-- App Icon -->
-    <MauiIcon Include="Resources\AppIcon\appicon.png" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
+    <MauiIcon Include="Resources\AppIcon\appicon.png" />
+    <!--<MauiIcon Include="Resources\AppIcon\appicon.png" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />-->
 
     <!-- Splash Screen -->
     <MauiSplashScreen Include="Resources\Splash\splash.png" Color="#f0f0f0" BaseSize="1024,1024" />
